--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,2 @@
-<p> one comment</p>
-<h4><%= comment.title %></h4>
+<h4><a href=<%= comment_path(comment) %>><%= comment.title %></a> -<%= comment.user.name %></h4>
 <p><%= comment.body %></p>
