--- a/app/views/comments/_edit_form.html.erb
+++ b/app/views/comments/_edit_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: [@post, @post.comments.build] do |form| %>
+<%= form_with model: comment do |form| %>
   <div>
     <%= form.label :user %>
     <%= form.collection_select :user_id, User.all, :id, :name, prompt: true %>
@@ -6,7 +6,7 @@
   <div>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
-    <% @post.errors.full_messages_for(:title).each do |message| %>
+    <% comment.errors.full_messages_for(:title).each do |message| %>
       <div><%= message %></div>
     <% end %>
   </div>
@@ -14,6 +14,9 @@
   <p>
     <%= form.label :body %><br>
     <%= form.text_area :body %>
+    <% comment.errors.full_messages_for(:body).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </p>
 
   <div>
