--- a/app/views/posts/_edit_form.html.erb
+++ b/app/views/posts/_edit_form.html.erb
@@ -10,6 +10,9 @@
   <p>
     <%= form.label :body %><br>
     <%= form.text_area :body %>
+    <% post.errors.full_messages_for(:body).each do |message| %>
+      <div><%= message %></div>
+    <% end %>
   </p>
 
   <div>
