--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,6 +8,15 @@
         <% user.posts&.each do |post| %>
           <li>
             <%= link_to post.title, post %>
+            <ul>
+              <li>Comments:</li>
+              <% post.comments&.each do |comment| %>
+                <li>
+                  <h4><%= link_to comment.title, comment %> -<%= comment.user.name %></h4>
+                  <p><%= comment.body %></p>
+                </li>
+              <% end %>
+            </ul>
           </li>
         <% end %>
       </ul>
